# DeepResearchEval

./: .gitignore  README.md  pyproject.toml
data/input_queries/: query.jsonl  query_2601_en.jsonl
data/method_results/gemini_2.5_pro/: deep_research_1_20250819_222419.json  deep_research_2_20250819_233323.json  deep_research_3_20250820_110902.json  deep_research_4_20250820_171532.json  deep_research_5_20250820_112324.json
factual_eval/apps/run-agent/: batch_fact.sh  batch_test.py  fact_check.py  main.py
point_quality/: .gitignore  example_pointwise_usage.py  requirements.txt
point_quality/deepresearcharena/config/: pointwise.yaml
point_quality/deepresearcharena/evaluator/: base_evaluator.py  pointwise_core.py  pointwise_evaluator.py
point_quality/deepresearcharena/prompts/: pointwise_prompts.py
point_quality/deepresearcharena/utils/: llm_call.py
task_generation/: README.md  __init__.py  config.py  domains.json  main.py
task_generation/clients/: __init__.py  api_client.py
task_generation/filters/: __init__.py  deep_research_filter.py  quality_assessor.py
task_generation/generators/: __init__.py  domain_loader.py  expert_generator.py  task_generator.py
task_generation/outputs/task_generation/: intermediate_2_experts.json  intermediate_3_tasks.json  intermediate_4_filtered_tasks.json  intermediate_5_baseline_answers.json  test_tasks.json  test_tasks.jsonl
task_generation/pipeline/: __init__.py  orchestrator.py
task_generation/prompts/: __init__.py  templates.py
task_generation/utils/: __init__.py  file_utils.py  json_utils.py
(+10 files in other folders)
