[project]
name = "deep-research-eval"
version = "0.1.0"
description = "An Automated Benchmark with Agentic Evaluation for Deep Research Agents"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "jsonlines>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
